rename free plans vps

--- a/pages/vps.html
+++ b/pages/vps.html
@@ -164,7 +164,7 @@
                
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
-                            <h5 class="text-center p-2"><strong>Plano 4.0</strong></h5>
+                            <h5 class="text-center p-2"><strong>Plano Free</strong></h5>
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
@@ -188,7 +188,7 @@
                
                         <!-- Titulo Plano -->
                         <div class="container my-3" id="price-plan-title">
-                            <h5 class="text-center p-2"><strong>Plano 8.0</strong></h5>
+                            <h5 class="text-center p-2"><strong>Plano ETEC</strong></h5>
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
