organize folders and adjust container price size

--- a/pages/vps.html
+++ b/pages/vps.html
@@ -19,6 +19,7 @@
     <main class="bd-masthead" role="main">
 <!-- <div class="container-fluid" style="background-color: #221E1C; height: 10rem;"></div> -->
         <div class="triangle-vps"></div>
+        <!-- Get started -->
         <div id="row" class="row text-center justify-content-center" style="width: 60rem;">
             <div class="col">
                 <div class="container mt-4">
@@ -58,7 +59,7 @@
         <div class="container-fluid" id="fundo"></div>
 
         <!-- Planos e preços -->
-        <div class="container-fluid" id="container-price">
+        <div class="container-fluid py-5" id="container-price">
             <!-- Titulo planos VPS -->
             <div class="container" id="price-title-container" style="width: 40rem;">
                 <h4 class="text-center p-3"><strong>Planos de VPS</strong></h4>
@@ -183,7 +184,7 @@
                   
                     </div>
                 </div>
-                <div class="my-auto"><img src="../src/ethernet 1.png" style="width:40vh" class="img-fluid" alt="Logo"></div>
+                <div class="my-auto"><img src="../src/ethernet 1.png" style="width:40vh; " class="img-fluid" alt="Logo"></div>
 
                 <!-- Plano 2 -->
                 <div class="col mr-5" id="price-plans-background">
