--- a/auth/register.html
+++ b/auth/register.html
@@ -120,7 +120,8 @@
 
 
     <!-- Footer -->
-    <iframe src="../common/footer.html"
+    <iframe src="
+    ../common/footer.html"
      onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
 
 
