--- a/common/header.html
+++ b/common/header.html
@@ -15,7 +15,9 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-gradient-secondary">
 
     <div class="container">
-        <img src="../src/logotipo2.png" style="width:20vh" class="img-fluid" alt="Logo">
+        <a href="/">
+        <img src="../src/logotipo2.png"  style="width:20vh" class="img" alt="Logo">
+    </a>
         <button class="navbar-toggler bg-primary" type="button" data-toggle="collapse"
             data-target="#navbarSite">
             <span class="navbar-toggler-icon"></span>
@@ -26,16 +28,13 @@
                 <ul class="navbar-nav">
 
                     <li class="nav-item">
-                        <a class="nav-link text-font" href="#">VPS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-font" href="#">Preços</a>
+                        <a class="nav-link text-font" href="/pages/vps.html">VPS</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-font" href="#">Hospedagem</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-font" href="#">Entrar</a>
+                        <a class="nav-link text-font" href="/auth/login.html">Entrar</a>
                     </li>
 
                 </ul>
