--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container-fluid" id="fundo"></div> 
         
         <!-- Preços -->
-        <div class="container-fluid" id="container-price">
+        <div class="container-fluid py-5" id="container-price">
             <!-- Titulo planos -->
             <div class="container" id="price-title-container" style="width: 40rem;">
                 <h4 class="text-center p-3"><strong>Planos de Hospedagens</strong></h4>
