add sql and gradient title

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="container mt-4" style="height: 70%;">
 
                     <div class="text-center">
-                        <h1 class="mb-3 text-font">Hospedagem de Servidores Rápida e Segura</h1>
+                        <h1 class="mb-3 gradient-text">Hospedagem de Servidores Rápida e Segura</h1>
                         <p class="lead mb-4 text-font">Vendemos servidores baratos e distribuímos máquinas
                             para
                             realizações dos TCCs gratuitamente</p>
