--- a/pages/vps.html
+++ b/pages/vps.html
@@ -24,9 +24,9 @@
             <div class="col">
                 <div class="container mt-4">
                     <div class="text-center">
-                        <h1 class="mb-3 text-font"><strong><p>VPS</p>
+                        <h1 class="mb-3 gradient-text"><strong><p>VPS</p>
                             (Servidor Virtual Privado)</strong></h1>
-                        <p class="lead mb-4 tet-font">Hospedagem de servidores privados para usoos multiplos.</p>
+                        <p class="lead mb-4">Hospedagem de servidores privados para usoos multiplos.</p>
                         <p class="lead tet-font">Confira nosso mehores planos a abaixo:</p>
 
                     </div>
