new pages hosting, cloud and vps

--- a/common/header.html
+++ b/common/header.html
@@ -16,10 +16,9 @@
 
     <div class="container">
         <a href="/">
-        <img src="../src/logotipo2.png"  style="width:20vh" class="img" alt="Logo">
-    </a>
-        <button class="navbar-toggler bg-primary" type="button" data-toggle="collapse"
-            data-target="#navbarSite">
+            <img src="../src/logotipo2.png" style="width:10em" class="img" alt="Logo">
+        </a>
+        <button class="navbar-toggler bg-primary" type="button" data-toggle="collapse" data-target="#navbarSite">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="row justify-content-end">
@@ -31,7 +30,10 @@
                         <a class="nav-link text-font" href="/pages/vps.html">VPS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-font" href="#">Hospedagem</a>
+                        <a class="nav-link text-font" href="/pages/cloud.html">Cloud</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-font" href="/pages/hosting.html">Hospedagem</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-font" href="/auth/login.html">Entrar</a>
