--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -19,18 +19,16 @@
     <main class="bd-masthead" role="main">
 
 
-        <div class="container-fluid" id="fundo" style="height: 460px;">
+        <div class="container-fluid" id="fundo" style="height: 420px;">
 
             <!-- Get started -->
             <div id="row" class="row text-center justify-content-center" style="width: 60rem;">
                 <div class="col">
                     <div class="container mt-4">
                         <div class="text-center">
-                            <h1 class="mb-3 gradient-text"><strong>
-                                    <p>VPS</p>
-                                    (Servidor Virtual Privado)
-                                </strong></h1>
-                            <p class="lead mb-4 text-font">Hospedagem de servidores privados para usos multiplos.</p>
+                            <h1 class="mb-3 gradient-text"><strong>Cloud (Nuvem)</strong></h1>
+                            <p class="lead mb-4 text-font">Cloud(nuvem) para armazenar seus arquivos onlinee com
+                                segurança.</p>
                             <p class="lead text-font">Confira nosso mehores planos a abaixo:</p>
 
                         </div>
@@ -44,7 +42,7 @@
                             <p class="font-weight-bold my-auto">Planos a partir de:</p>
                         </div>
                         <div class="container mt-3 p-1" id="desc-title" style="width: 15rem;">
-                            <p class="font-weight-bold my-auto">R$2,99/mês*</p>
+                            <p class="font-weight-bold my-auto">R$ #,##/mês*</p>
                         </div>
                     </div>
 
@@ -53,7 +51,7 @@
                 <div class="col">
                     <div class="container mt-4" style="height: 70%;">
                         <div class="container text-center">
-                            <img src="../src/private 1.png" style="width: 95%" styleclass="img" alt="Logo"></div>
+                            <img src="../src/cloud.png" style="width: 95%" styleclass="img" alt="Logo"></div>
 
 
 
@@ -77,11 +75,11 @@
 
         <!-- Planos e preços -->
         <div class="container-fluid py-5" id="container-price">
-            <!-- Titulo planos VPS -->
+            <!-- Titulo planos Cloud -->
             <div class="container" id="price-title-container" style="width: 40rem;">
-                <h4 class="text-center p-3"><strong>Planos de VPS</strong></h4>
+                <h4 class="text-center p-3"><strong>Planos de Cloud</strong></h4>
             </div>
-            <!-- Planos VPS -->
+            <!-- Planos Cloud -->
             <div class="row m-4">
                 <!-- Plano 1 -->
                 <div class="col mx-4" id="price-plans-background">
@@ -92,13 +90,16 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 19,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 5,99</strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3" id="price-desc-background">
-                            <p class="my-2">Para Windows e Linux;</p>
-                            <p class="my-2">40 GB de armazenamento;</p>
-                            <p class="my-2">2 vCPU de processamento.</p>
+                            <p class="my-2">50GB de Armazenamento
+                                Streaming de Vídeo</p>
+                            <p class="my-2">Compartilhamento</p>
+                            <p class="my-2">Office integrado</p>
+                            <p class="my-2">Video conferências</p>
+                            <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
@@ -114,13 +115,17 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 6,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 9,99</strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3" id="price-desc-background">
-                            <p class="my-2">Para Windows e Linux;</p>
-                            <p class="my-2">80 GB de armazenamento;</p>
-                            <p class="my-2">3 vCPU de processamento.</p>
+                            <p class="my-2">100GB de Armazenamento
+                                Streaming de Vídeo</p>
+                            <p class="my-2">Compartilhamento</p>
+                            <p class="my-2">Office integrado</p>
+                            <p class="my-2">Video conferências</p>
+                            <p class="my-2">Cliente Torrent (100KB/s max)</p>
+                            <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
@@ -136,13 +141,17 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 9,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 14,99</strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3" id="price-desc-background">
-                            <p class="my-2">Para Windows e Linux;</p>
-                            <p class="my-2">200 GB de armazenamento;</p>
-                            <p class="my-2">4 vCPU de processamento.</p>
+                            <p class="my-2">250GB de Armazenamento
+                                Streaming de Vídeo</p>
+                            <p class="my-2">Compartilhamento</p>
+                            <p class="my-2">Office integrado</p>
+                            <p class="my-2">Video conferências</p>
+                            <p class="my-2">Cliente Torrent (150KB/s max)</p>
+                            <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
@@ -158,73 +167,22 @@
                         </div>
                         <!-- Preço  -->
                         <div class="container my-3" id="price-plan-price">
-                            <h5 class="text-font text-center p-3"><strong>R$ 14,99</strong></h5>
+                            <h5 class="text-font text-center p-3"><strong>R$ 19,99</strong></h5>
                         </div>
                         <!-- Descrição -->
                         <div class="p-3" id="price-desc-background">
-                            <p class="my-2">Para Windows e Linux;</p>
-                            <p class="my-2">400 GB de armazenamento;</p>
-                            <p class="my-2">4 vCPU de processamento.</p>
+                            <p class="my-2">500GB de Armazenamento
+                                Streaming de Vídeo</p>
+                            <p class="my-2">Compartilhamento</p>
+                            <p class="my-2">Office integrado</p>
+                            <p class="my-2">Video conferências</p>
+                            <p class="my-2">Cliente Torrent (150KB/s max)</p>
+                            <p class="my-2">Integração com Nuvens externas (GDrive, OneDrive)</p>
                         </div>
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
                         </div>
                     </div>
-                </div>
-
-            </div>
-            <!-- Titulo VPS Free -->
-            <div class="container" id="price-title-container" style="width: 40rem; margin-top: 5em;">
-                <h4 class="text-center p-3"><strong>Planos de VPS Free</strong></h4>
-            </div>
-            <!-- Planos VPS Free -->
-            <div class="row m-4 mx-auto" style="width:60rem;">
-                <!-- Plano 1 -->
-                <div class="col ml-5" id="price-plans-background">
-
-                    <!-- Titulo Plano -->
-                    <div class="container my-3" id="price-plan-title">
-                        <h5 class="text-center p-2"><strong>Plano Free</strong></h5>
-                    </div>
-                    <!-- Preço  -->
-                    <div class="container my-3" id="price-plan-price">
-                        <h5 class="text-font text-center p-3"><strong>R$ 19,99</strong></h5>
-                    </div>
-                    <!-- Descrição -->
-                    <div class="p-3" id="price-desc-background">
-                        <p class="my-2">Para Windows e Linux;</p>
-                        <p class="my-2">40 GB de armazenamento;</p>
-                        <p class="my-2">2 vCPU de processamento.</p>
-                    </div>
-                    <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
-                        <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
-
-                    </div>
-                </div>
-                <div class="my-auto"><img src="../src/ethernet 1.png" style="width:40vh; " class="img-fluid" alt="Logo">
-                </div>
-
-                <!-- Plano 2 -->
-                <div class="col mr-5" id="price-plans-background">
-
-                    <!-- Titulo Plano -->
-                    <div class="container my-3" id="price-plan-title">
-                        <h5 class="text-center p-2"><strong>Plano ETEC</strong></h5>
-                    </div>
-                    <!-- Preço  -->
-                    <div class="container my-3" id="price-plan-price">
-                        <h5 class="text-font text-center p-3"><strong>R$ 6,99</strong></h5>
-                    </div>
-                    <!-- Descrição -->
-                    <div class="p-3" id="price-desc-background">
-                        <p class="my-2">Para Windows e Linux;</p>
-                        <p class="my-2">80 GB de armazenamento;</p>
-                        <p class="my-2">3 vCPU de processamento.</p>
-                    </div>
-                    <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
-                        <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
-                    </div>
-
                 </div>
             </div>
         </div>
