--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -19,18 +19,15 @@
     <main class="bd-masthead" role="main">
 
 
-        <div class="container-fluid" id="fundo" style="height: 460px;">
+        <div class="container-fluid" id="fundo" style="height: 420px;">
 
             <!-- Get started -->
             <div id="row" class="row text-center justify-content-center" style="width: 60rem;">
                 <div class="col">
                     <div class="container mt-4">
                         <div class="text-center">
-                            <h1 class="mb-3 gradient-text"><strong>
-                                    <p>VPS</p>
-                                    (Servidor Virtual Privado)
-                                </strong></h1>
-                            <p class="lead mb-4 text-font">Hospedagem de servidores privados para usos multiplos.</p>
+                            <h1 class="mb-3 gradient-text"><strong>Hospedagem</strong></h1>
+                            <p class="lead mb-4 text-font">Hospedagem de sites por 24 horas aos 7 dias da semana.</p>
                             <p class="lead text-font">Confira nosso mehores planos a abaixo:</p>
 
                         </div>
@@ -44,7 +41,7 @@
                             <p class="font-weight-bold my-auto">Planos a partir de:</p>
                         </div>
                         <div class="container mt-3 p-1" id="desc-title" style="width: 15rem;">
-                            <p class="font-weight-bold my-auto">R$2,99/mês*</p>
+                            <p class="font-weight-bold my-auto">R$ #,##/mês*</p>
                         </div>
                     </div>
 
@@ -53,7 +50,7 @@
                 <div class="col">
                     <div class="container mt-4" style="height: 70%;">
                         <div class="container text-center">
-                            <img src="../src/private 1.png" style="width: 95%" styleclass="img" alt="Logo"></div>
+                            <img src="../src/hosting.png" style="width: 95%" styleclass="img" alt="Logo"></div>
 
 
 
@@ -77,11 +74,11 @@
 
         <!-- Planos e preços -->
         <div class="container-fluid py-5" id="container-price">
-            <!-- Titulo planos VPS -->
+            <!-- Titulo planos Hospedagem -->
             <div class="container" id="price-title-container" style="width: 40rem;">
-                <h4 class="text-center p-3"><strong>Planos de VPS</strong></h4>
+                <h4 class="text-center p-3"><strong>Planos de Hospedagem</strong></h4>
             </div>
-            <!-- Planos VPS -->
+            <!-- Planos Hospedagem -->
             <div class="row m-4">
                 <!-- Plano 1 -->
                 <div class="col mx-4" id="price-plans-background">
@@ -96,9 +93,11 @@
                         </div>
                         <!-- Descrição -->
                         <div class="p-3" id="price-desc-background">
-                            <p class="my-2">Para Windows e Linux;</p>
-                            <p class="my-2">40 GB de armazenamento;</p>
-                            <p class="my-2">2 vCPU de processamento.</p>
+                            <p class="my-2">Painel limitado</p>
+                            <p class="my-2">1 Website</p>
+                            <p class="my-2">1 Conta de E-mail</p>
+                            <p class="my-2">Lagura de banda ilimitada</p>
+                            <p class="my-2">1vCPU</p>
                         </div>
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
@@ -118,9 +117,11 @@
                         </div>
                         <!-- Descrição -->
                         <div class="p-3" id="price-desc-background">
-                            <p class="my-2">Para Windows e Linux;</p>
-                            <p class="my-2">80 GB de armazenamento;</p>
-                            <p class="my-2">3 vCPU de processamento.</p>
+                            <p class="my-2">Painel limitado</p>
+                            <p class="my-2">2 Website</p>
+                            <p class="my-2">1 Conta de E-mail</p>
+                            <p class="my-2">Lagura de banda ilimitada</p>
+                            <p class="my-2">1.5vCPU</p>
                         </div>
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
@@ -140,9 +141,11 @@
                         </div>
                         <!-- Descrição -->
                         <div class="p-3" id="price-desc-background">
-                            <p class="my-2">Para Windows e Linux;</p>
-                            <p class="my-2">200 GB de armazenamento;</p>
-                            <p class="my-2">4 vCPU de processamento.</p>
+                            <p class="my-2">Painel limitado</p>
+                            <p class="my-2">5 Website</p>
+                            <p class="my-2">3 Conta de E-mail</p>
+                            <p class="my-2">Lagura de banda ilimitada</p>
+                            <p class="my-2">2vCPU</p>
                         </div>
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
@@ -162,9 +165,11 @@
                         </div>
                         <!-- Descrição -->
                         <div class="p-3" id="price-desc-background">
-                            <p class="my-2">Para Windows e Linux;</p>
-                            <p class="my-2">400 GB de armazenamento;</p>
-                            <p class="my-2">4 vCPU de processamento.</p>
+                            <p class="my-2">Painel limitado</p>
+                            <p class="my-2">10 Website</p>
+                            <p class="my-2">5 Conta de E-mail</p>
+                            <p class="my-2">Lagura de banda ilimitada</p>
+                            <p class="my-2">4vCPU</p>
                         </div>
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
@@ -173,60 +178,7 @@
                 </div>
 
             </div>
-            <!-- Titulo VPS Free -->
-            <div class="container" id="price-title-container" style="width: 40rem; margin-top: 5em;">
-                <h4 class="text-center p-3"><strong>Planos de VPS Free</strong></h4>
-            </div>
-            <!-- Planos VPS Free -->
-            <div class="row m-4 mx-auto" style="width:60rem;">
-                <!-- Plano 1 -->
-                <div class="col ml-5" id="price-plans-background">
 
-                    <!-- Titulo Plano -->
-                    <div class="container my-3" id="price-plan-title">
-                        <h5 class="text-center p-2"><strong>Plano Free</strong></h5>
-                    </div>
-                    <!-- Preço  -->
-                    <div class="container my-3" id="price-plan-price">
-                        <h5 class="text-font text-center p-3"><strong>R$ 19,99</strong></h5>
-                    </div>
-                    <!-- Descrição -->
-                    <div class="p-3" id="price-desc-background">
-                        <p class="my-2">Para Windows e Linux;</p>
-                        <p class="my-2">40 GB de armazenamento;</p>
-                        <p class="my-2">2 vCPU de processamento.</p>
-                    </div>
-                    <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
-                        <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
-
-                    </div>
-                </div>
-                <div class="my-auto"><img src="../src/ethernet 1.png" style="width:40vh; " class="img-fluid" alt="Logo">
-                </div>
-
-                <!-- Plano 2 -->
-                <div class="col mr-5" id="price-plans-background">
-
-                    <!-- Titulo Plano -->
-                    <div class="container my-3" id="price-plan-title">
-                        <h5 class="text-center p-2"><strong>Plano ETEC</strong></h5>
-                    </div>
-                    <!-- Preço  -->
-                    <div class="container my-3" id="price-plan-price">
-                        <h5 class="text-font text-center p-3"><strong>R$ 6,99</strong></h5>
-                    </div>
-                    <!-- Descrição -->
-                    <div class="p-3" id="price-desc-background">
-                        <p class="my-2">Para Windows e Linux;</p>
-                        <p class="my-2">80 GB de armazenamento;</p>
-                        <p class="my-2">3 vCPU de processamento.</p>
-                    </div>
-                    <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
-                        <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
-                    </div>
-
-                </div>
-            </div>
         </div>
         <!-- Footer -->
         <iframe src="../common/footer.html"
