--- a/auth/register.html
+++ b/auth/register.html
@@ -3,20 +3,20 @@
 <head>
     <title>SudoHosting</title>
 
-   <!-- Required meta tags -->
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-   
-   <!-- Scripts -->
-   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
-   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
 
-   <!-- CSS only -->
-   <link rel="stylesheet" href="../css/auth.css">
-   <link rel="stylesheet" href="../node_modules/bootstrap/compiler/bootstrap.css">
-   <link rel="stylesheet" href="../css/home.css">
+    <!-- Scripts -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+
+    <!-- CSS only -->
+    <link rel="stylesheet" href="../css/auth.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/compiler/bootstrap.css">
+    <link rel="stylesheet" href="../css/home.css">
 
 
 
@@ -37,7 +37,7 @@
                         <p class="my-2 text-center font-weight-bold">Nome</p>
                     </div>
                     <div class="col d-flex justify-content-center">
-                        <div class="container" id="login-campo">
+                        <div class="container login-campo">
                             <input type="email" class="form-control" style="border-width: 0px;">
                         </div>
                     </div>
@@ -49,7 +49,7 @@
                         <p class="my-2 text-center font-weight-bold">Email</p>
                     </div>
                     <div class="col d-flex justify-content-center">
-                        <div class="container" id="login-campo">
+                        <div class="container login-campo">
                             <input type="password" class="form-control" style="border-width: 0px;">
 
                         </div>
@@ -62,7 +62,7 @@
                         <p class="my-2 text-center font-weight-bold">Senha</p>
                     </div>
                     <div class="col d-flex justify-content-center">
-                        <div class="container" id="login-campo">
+                        <div class="container login-campo">
                             <input class="form-control" style="border-width: 0px;">
 
                         </div>
@@ -75,7 +75,7 @@
                         <p class="my-2 text-center font-weight-bold">Idade</p>
                     </div>
                     <div class="col d-flex justify-content-center">
-                        <div class="container" id="login-campo">
+                        <div class="container login-campo">
                             <input class="form-control" style="border-width: 0px;">
 
                         </div>
@@ -88,8 +88,9 @@
                         <p class="my-2 text-center font-weight-bold">CPF</p>
                     </div>
                     <div class="col d-flex justify-content-center">
-                        <div class="container" id="login-campo">
-                            <input type="text" class="form-control" onkeypress="$(this).mask('000.000.000-00');"  style="border-width: 0px;">
+                        <div class="container login-campo">
+                            <input type="text" class="form-control" onkeypress="$(this).mask('000.000.000-00');"
+                                style="border-width: 0px;">
                         </div>
                     </div>
                 </div>
@@ -100,7 +101,7 @@
                         <p class="my-2 text-center font-weight-bold">Participa da ETEC</p>
                     </div>
                     <div class="col d-flex justify-content-center">
-                        <div class="container" id="login-campo">
+                        <div class="container login-campo">
                             <input class="form-control" style="border-width: 0px;">
                         </div>
                     </div>
@@ -111,6 +112,10 @@
                 <div class="my-4">
                     <lead>Estudantes da ETEC conseguem hospedagem grátis para o TCC.</lead>
                 </div>
+                <p>Já possui uma conta?</p>
+                <a href="register.html">
+                    <p class="text-font">Clique aqui para entrar</p>
+                </a>
             </div>
 
 
@@ -122,7 +127,7 @@
     <!-- Footer -->
     <iframe src="
     ../common/footer.html"
-     onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
+        onload="this.before((this.contentDocument.body||this.contentDocument).children[0]);this.remove()"></iframe>
 
 
 </body>
