add gradient container

--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -72,7 +72,7 @@
         <div class="container-fluid py-5" id="container-price">
             <!-- Titulo planos Hospedagem -->
             <div class="container" id="price-title-container" style="width: 40rem;">
-                <h4 class="text-center p-3"><strong>Planos de Hospedagem</strong></h4>
+                <h4 class="text-center text-font text-font p-3"><strong>Planos de Hospedagem</strong></h4>
             </div>
             <!-- Planos Hospedagem -->
             <div class="row m-4">
