--- a/pages/vps.html
+++ b/pages/vps.html
@@ -75,7 +75,7 @@
         <div class="container-fluid py-5" id="container-price">
             <!-- Titulo planos VPS -->
             <div class="container" id="price-title-container" style="width: 40rem;">
-                <h4 class="text-center p-3"><strong>Planos de VPS</strong></h4>
+                <h4 class="text-center text-font text-font p-3"><strong>Planos de VPS</strong></h4>
             </div>
             <!-- Planos VPS -->
             <div class="row m-4">
