fix color vps title

--- a/pages/vps.html
+++ b/pages/vps.html
@@ -171,7 +171,7 @@
             </div>
             <!-- Titulo VPS Free -->
             <div class="container" id="price-title-container" style="width: 40rem; margin-top: 5em;">
-                <h4 class="text-center p-3"><strong>Planos de VPS Free</strong></h4>
+                <h4 class="text-center text-font p-3"><strong>Planos de VPS Free</strong></h4>
             </div>
             <!-- Planos VPS Free -->
             <div class="row m-4 mx-auto" style="width:60rem;">
