gradient getstarted button

--- a/index.html
+++ b/index.html
@@ -46,9 +46,12 @@
                             <p class="lead mb-4 text-font">Vendemos servidores baratos e distribuímos máquinas
                                 para
                                 realizações dos TCCs gratuitamente</p>
-                            <button type="button" class="btn getstarted">
-                                <p class="font-weight-bold text-font my-1 mx-1">Comece agora</p>
+                               
+                            <button type="button" class="btn getstarted m-4">
+                                <lead class="font-weight-bold text-font" style="font-size: 15pt;">Comece agora</lead>
+                                <!-- <h5 class="font-weight-bold text-font">Comece agora</h5> -->
                             </button>
+                        
                         </div>
                     </div>
                 </div>
