gradient button adjust

--- a/auth/login.html
+++ b/auth/login.html
@@ -11,10 +11,6 @@
     <link rel="stylesheet" href="../css/auth.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/home.css">
-
-
-
-
 </head>
 
 <body>
@@ -50,9 +46,9 @@
                         </div>
                     </div>
                 </div>
-                <div type="button" class="button mx-auto" style="width: 150px;">
-                    <p class="text-font my-auto p-2"><strong>Logar</strong></p>
-                </div>
+                <button type="button" class="btn gradientbutton" style="width: 30vh;">
+                    <h5 class="text-font my-auto p"><strong>Entrar</strong></h5>
+                </button>
 
                 <p class="mt-4">Não possui uma conta?</p>
                 <a href="register.html">
