--- a/auth/register.html
+++ b/auth/register.html
@@ -106,9 +106,9 @@
                         </div>
                     </div>
                 </div>
-                <div type="button" class="button mx-auto" style="width: 150px;">
-                    <p class="text-font my-auto p-2"><strong>Cadastrar</strong></p>
-                </div>
+                <button type="button" class="btn gradientbutton" style="width: 30vh;">
+                    <h5 class="text-font my-auto p"><strong>Cadastrar</strong></h5>
+                </button>
                 <div class="my-4">
                     <lead>Estudantes da ETEC conseguem hospedagem grátis para o TCC.</lead>
                 </div>
