--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
 
 
 
-        <div class="container-fluid" id="fundo" style="height: 380px;">
+        <div class="container-fluid" id="fundo" style="height: 420px;">
             <div id="row" class="row justify-content-center" style="width: 60rem;">
                 <div class="col" style="margin-right: 10em;">
-                    <div class="container mt-4">
-                        <div class="container text-center">
+                    <div class="container mt-4  text-center">
+                        <div class="container">
                             <img src="src/saas1.png" style="width: 55%" styleclass="img" alt="Logo"></div>
-                        <div class="container mt-4 rounded bg-font text-center" style="width: 50%">
+                        <div class="container rounded mt-4" style="width: 50%; background-color: #FFDFD4;">
                             <p class="font-weight-bold">Planos a partir de:</p>
                         </div>
-                        <div class="container rounded bg-font text-center" style="width: 50%">
+                        <div class="container rounded" style="width: 50%; background-color: #FFDFD4;">
                             <p class="font-weight-bold">R$2,99/mês*</p>
                         </div>
                     </div>
@@ -45,7 +45,7 @@
                                 para
                                 realizações dos TCCs gratuitamente</p>
                                
-                            <button type="button" class="btn getstarted m-4">
+                            <button type="button" class="btn gradientbutton m-4">
                                 <lead class="font-weight-bold text-font" style="font-size: 15pt;">Comece agora</lead>
                                 <!-- <h5 class="font-weight-bold text-font">Comece agora</h5> -->
                             </button>
