--- a/pages/vps.html
+++ b/pages/vps.html
@@ -32,7 +32,7 @@
                                 </strong></h1>
                             <p class="lead mb-4 text-font">Hospedagem de servidores privados para usos multiplos.</p>
                             <p class="lead text-font">Confira nosso mehores planos a abaixo:</p>
-                            <button type="button" class="btn getstarted" style="width: 15rem;">
+                            <button type="button" class="btn gradientbutton" style="width: 15rem;">
                                 <h4 class="text-font my-auto"><strong>Obter</strong></h4>
                             </button>
                         </div>
