--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -30,7 +30,7 @@
                             <p class="lead mb-4 text-font">Cloud(nuvem) para armazenar seus arquivos onlinee com
                                 segurança.</p>
                             <p class="lead text-font">Confira nosso mehores planos a abaixo:</p>
-                            <button type="button" class="btn getstarted" style="width: 15rem;">
+                            <button type="button" class="btn gradientbutton" style="width: 15rem;">
                                 <h4 class="text-font my-auto"><strong>Obter</strong></h4>
                             </button>
                         </div>
