--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -29,7 +29,7 @@
                             <h1 class="mb-3 gradient-text"><strong>Hospedagem</strong></h1>
                             <p class="lead mb-4 text-font">Hospedagem de sites por 24 horas aos 7 dias da semana.</p>
                             <p class="lead text-font">Confira nosso mehores planos a abaixo:</p>
-                            <button type="button" class="btn getstarted" style="width: 15rem;">
+                            <button type="button" class="btn gradientbutton" style="width: 15rem;">
                                 <h4 class="text-font my-auto"><strong>Obter</strong></h4>
                             </button>
                         </div>
