fix date picker register

--- a/common/footer.html
+++ b/common/footer.html
@@ -51,7 +51,7 @@
         <!-- Licença -->
         <div class="container-fluid p-3 text-center" id="footer-license-background">
            
-            <img src="../src/logotipo2.png" style="width:7em" class="img-fluid" alt="Logo">
+            <img src="../src/img/logotipo2.png" style="width:7em" class="img-fluid" alt="Logo">
             <lead class="text-font my-auto">© 2020-2020 sudohosting.com.br - Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </lead>
        
