--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <div class="col" style="margin-right: 10em;">
                     <div class="container mt-4  text-center">
                         <div class="container">
-                            <img src="src/saas1.png" style="width: 55%" styleclass="img" alt="Logo"></div>
+                            <img src="src/img/saas1.png" style="width: 55%" styleclass="img" alt="Logo"></div>
                         <div class="container rounded mt-4" style="width: 50%; background-color: #FFDFD4;">
                             <p class="font-weight-bold">Planos a partir de:</p>
                         </div>
