--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -46,7 +46,7 @@
                 <div class="col">
                     <div class="container mt-4" style="height: 70%;">
                         <div class="container text-center">
-                            <img src="../src/hosting.png" style="width: 95%" styleclass="img" alt="Logo"></div>
+                            <img src="../src/img/hosting.png" style="width: 95%" styleclass="img" alt="Logo"></div>
 
 
 
