--- a/common/header.html
+++ b/common/header.html
@@ -16,7 +16,7 @@
 
     <div class="container">
         <a href="/">
-            <img src="/src/logotipo2.png" style="width:10em" class="img" alt="Logo">
+            <img src="/src/img/logotipo2.png" style="width:10em" class="img" alt="Logo">
         </a>
         <button class="navbar-toggler bg-primary" type="button" data-toggle="collapse" data-target="#navbarSite">
             <span class="navbar-toggler-icon"></span>
