--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -47,7 +47,7 @@
                 <div class="col">
                     <div class="container mt-4" style="height: 70%;">
                         <div class="container text-center">
-                            <img src="../src/cloud.png" style="width: 95%" styleclass="img" alt="Logo"></div>
+                            <img src="../src/img/cloud.png" style="width: 95%" styleclass="img" alt="Logo"></div>
 
 
 
