--- a/pages/vps.html
+++ b/pages/vps.html
@@ -49,7 +49,7 @@
                 <div class="col">
                     <div class="container mt-4" style="height: 70%;">
                         <div class="container text-center">
-                            <img src="../src/private 1.png" style="width: 95%" styleclass="img" alt="Logo"></div>
+                            <img src="../src/img/private 1.png" style="width: 95%" styleclass="img" alt="Logo"></div>
 
 
 
