date picker adjust

--- a/auth/register.html
+++ b/auth/register.html
@@ -87,12 +87,12 @@
 
                  <!-- Idade -->
                  <div class="row my-4">
-                    <div class="col col-lg-1 ">
-                        <p class="my-2 text-center font-weight-bold">Idade</p>
+                    <div class="col col-lg-3 ">
+                        <p class="my-2 text-center font-weight-bold" style="width: 150px;">Data de nascimento</p>
                     </div>
 
                             <!-- <div class="mx-5 text-center login-campo">  -->
-                                <input id="date-input" class="mx-3 text-center login-campo" type="text" style="width: 130px;">
+                                <input id="date-input" class="text-center login-campo" type="text" style="width: 130px;">
                                 <!-- datedropper init -->
                                 <script>$('#date-input').dateDropper({
                                     large:true,
@@ -103,10 +103,14 @@
                         <!-- </div> -->
                 </div>
 
+
+                <!-- ####################
+                   Precisa de fix
+                #################### -->
                 <!-- Aluno etec -->
                 <div class="row my-4">
                     <div class="col col-lg-3">
-                        <p class="my-2 text-center font-weight-bold">Participa da ETEC</p>
+                        <lead class="font-weight-bold" style="width: 150px;">Aluno da ETEC</lead>
                     </div>
                     <div class="col d-flex justify-content-center">
                         <div class="container login-campo">
@@ -114,6 +118,11 @@
                         </div>
                     </div>
                 </div>
+
+
+
+
+                <!-- Botão -->
                 <button type="button" class="btn gradientbutton" style="width: 30vh;">
                     <h5 class="text-font my-auto p"><strong>Cadastrar</strong></h5>
                 </button>
