--- a/pages/vps.html
+++ b/pages/vps.html
@@ -197,7 +197,7 @@
 
                     </div>
                 </div>
-                <div class="my-auto"><img src="../src/ethernet 1.png" style="width:40vh; " class="img-fluid" alt="Logo">
+                <div class="my-auto"><img src="../src/img/ethernet 1.png" style="width:40vh; " class="img-fluid" alt="Logo">
                 </div>
 
                 <!-- Plano 2 -->
