change font and another adjust

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/home.css">
+
+      <!-- Fonts -->
+      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet"> 
+     
 </head>
 
 <body>
@@ -20,7 +24,7 @@
 
 
 
-        <div class="container-fluid" id="fundo" style="height: 420px;">
+        <div class="container-fluid" id="fundo" style="height: 460px;">
             <div id="row" class="row justify-content-center" style="width: 60rem;">
                 <div class="col" style="margin-right: 10em;">
                     <div class="container mt-4  text-center">
