--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -10,6 +10,10 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/home.css">
+
+      <!-- Fonts -->
+      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet"> 
+     
 </head>
 
 <body>
@@ -29,7 +33,7 @@
                             <h1 class="mb-3 gradient-text"><strong>Cloud (Nuvem)</strong></h1>
                             <p class="lead mb-4 text-font">Cloud(nuvem) para armazenar seus arquivos onlinee com
                                 segurança.</p>
-                            <p class="lead text-font">Confira nosso mehores planos a abaixo:</p>
+                            <p class="lead text-font">Confira nosso melhores planos a abaixo:</p>
                             <button type="button" class="btn gradientbutton" style="width: 15rem;">
                                 <h4 class="text-font my-auto"><strong>Obter</strong></h4>
                             </button>
