--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -10,6 +10,10 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/home.css">
+
+      <!-- Fonts -->
+      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet"> 
+     
 </head>
 
 <body>
@@ -28,7 +32,7 @@
                         <div class="text-center">
                             <h1 class="mb-3 gradient-text"><strong>Hospedagem</strong></h1>
                             <p class="lead mb-4 text-font">Hospedagem de sites por 24 horas aos 7 dias da semana.</p>
-                            <p class="lead text-font">Confira nosso mehores planos a abaixo:</p>
+                            <p class="lead text-font">Confira nosso melhore splanos a abaixo:</p>
                             <button type="button" class="btn gradientbutton" style="width: 15rem;">
                                 <h4 class="text-font my-auto"><strong>Obter</strong></h4>
                             </button>
