--- a/auth/login.html
+++ b/auth/login.html
@@ -11,6 +11,11 @@
     <link rel="stylesheet" href="../css/auth.css">
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/home.css">
+
+     <!-- Fonts -->
+     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet"> 
+        
+
 </head>
 
 <body>
