--- a/auth/register.html
+++ b/auth/register.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/home.css">
 
+      <!-- Fonts -->
+      <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet"> 
+     
 
 
 </head>
