--- a/common/header.html
+++ b/common/header.html
@@ -7,7 +7,6 @@
 
     <!-- CSS only -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
-
     <link rel="stylesheet" href="../css/home.css">
 
 </head>
@@ -27,16 +26,16 @@
                 <ul class="navbar-nav">
 
                     <li class="nav-item">
-                        <a class="nav-link text-font" href="/pages/vps.html">VPS</a>
+                        <a class="nav-link text-font" style="font-size: 15pt;" href="/pages/vps.html">VPS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-font" href="/pages/cloud.html">Cloud</a>
+                        <a class="nav-link text-font" style="font-size: 15pt;" href="/pages/cloud.html">Cloud</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-font" href="/pages/hosting.html">Hospedagem</a>
+                        <a class="nav-link text-font" style="font-size: 15pt;" href="/pages/hosting.html">Hospedagem</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-font" href="/auth/login.html">Entrar</a>
+                        <a class="nav-link text-font" style="font-size: 15pt;" href="/auth/login.html">Entrar</a>
                     </li>
 
                 </ul>
