--- a/pages/vps.html
+++ b/pages/vps.html
@@ -10,6 +10,10 @@
     <!-- CSS only -->
     <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/home.css">
+
+     <!-- Fonts -->
+     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400&display=swap" rel="stylesheet"> 
+     
 </head>
 
 <body>
@@ -31,7 +35,7 @@
                                     (Servidor Virtual Privado)
                                 </strong></h1>
                             <p class="lead mb-4 text-font">Hospedagem de servidores privados para usos multiplos.</p>
-                            <p class="lead text-font">Confira nosso mehores planos a abaixo:</p>
+                            <p class="lead text-font">Confira nosso melhores planos a abaixo:</p>
                             <button type="button" class="btn gradientbutton" style="width: 15rem;">
                                 <h4 class="text-font my-auto"><strong>Obter</strong></h4>
                             </button>
