--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ ###,##</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <lead>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        <lead class="quicksand">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua. Elit pellentesque habitant.</lead>
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
@@ -109,7 +109,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ ###,##</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <lead>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        <lead class="quicksand">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua. Elit pellentesque habitant.</lead>
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
@@ -127,7 +127,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ ###,##</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <lead>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        <lead class="quicksand">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua. Elit pellentesque habitant.</lead>
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
@@ -145,7 +145,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ ###,##</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <lead>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                        <lead class="quicksand">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
                             ut labore et dolore magna aliqua. Elit pellentesque habitant.</lead>
                         <div type="button" class="button-plan m-4 mx-auto" style="width: 150px;">
                             <p class="text-font text-center my-auto p-2"><strong>Comprar Agora</strong></p>
