--- a/pages/hosting.html
+++ b/pages/hosting.html
@@ -92,7 +92,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ 19,99</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <div class="p-3" id="price-desc-background">
+                        <div class="p-3 quicksand" id="price-desc-background">
                             <p class="my-2">Painel limitado</p>
                             <p class="my-2">1 Website</p>
                             <p class="my-2">1 Conta de E-mail</p>
@@ -116,7 +116,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ 6,99</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <div class="p-3" id="price-desc-background">
+                        <div class="p-3 quicksand" id="price-desc-background">
                             <p class="my-2">Painel limitado</p>
                             <p class="my-2">2 Website</p>
                             <p class="my-2">1 Conta de E-mail</p>
@@ -140,7 +140,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ 9,99</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <div class="p-3" id="price-desc-background">
+                        <div class="p-3 quicksand" id="price-desc-background">
                             <p class="my-2">Painel limitado</p>
                             <p class="my-2">5 Website</p>
                             <p class="my-2">3 Conta de E-mail</p>
@@ -164,7 +164,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ 14,99</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <div class="p-3" id="price-desc-background">
+                        <div class="p-3 quicksand" id="price-desc-background">
                             <p class="my-2">Painel limitado</p>
                             <p class="my-2">10 Website</p>
                             <p class="my-2">5 Conta de E-mail</p>
