--- a/pages/cloud.html
+++ b/pages/cloud.html
@@ -93,7 +93,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ 5,99</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <div class="p-3" id="price-desc-background">
+                        <div class="p-3 quicksand" id="price-desc-background">
                             <p class="my-2">50GB de Armazenamento
                                 Streaming de Vídeo</p>
                             <p class="my-2">Compartilhamento</p>
@@ -118,7 +118,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ 9,99</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <div class="p-3" id="price-desc-background">
+                        <div class="p-3 quicksand" id="price-desc-background">
                             <p class="my-2">100GB de Armazenamento
                                 Streaming de Vídeo</p>
                             <p class="my-2">Compartilhamento</p>
@@ -144,7 +144,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ 14,99</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <div class="p-3" id="price-desc-background">
+                        <div class="p-3 quicksand" id="price-desc-background">
                             <p class="my-2">250GB de Armazenamento
                                 Streaming de Vídeo</p>
                             <p class="my-2">Compartilhamento</p>
@@ -170,7 +170,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ 19,99</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <div class="p-3" id="price-desc-background">
+                        <div class="p-3 quicksand" id="price-desc-background">
                             <p class="my-2">500GB de Armazenamento
                                 Streaming de Vídeo</p>
                             <p class="my-2">Compartilhamento</p>
