--- a/pages/vps.html
+++ b/pages/vps.html
@@ -95,7 +95,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ 19,99</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <div class="p-3" id="price-desc-background">
+                        <div class="p-3 quicksand" id="price-desc-background">
                             <p class="my-2">Para Windows e Linux;</p>
                             <p class="my-2">40 GB de armazenamento;</p>
                             <p class="my-2">2 vCPU de processamento.</p>
@@ -117,7 +117,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ 6,99</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <div class="p-3" id="price-desc-background">
+                        <div class="p-3 quicksand" id="price-desc-background">
                             <p class="my-2">Para Windows e Linux;</p>
                             <p class="my-2">80 GB de armazenamento;</p>
                             <p class="my-2">3 vCPU de processamento.</p>
@@ -139,7 +139,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ 9,99</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <div class="p-3" id="price-desc-background">
+                        <div class="p-3 quicksand" id="price-desc-background">
                             <p class="my-2">Para Windows e Linux;</p>
                             <p class="my-2">200 GB de armazenamento;</p>
                             <p class="my-2">4 vCPU de processamento.</p>
@@ -161,7 +161,7 @@
                             <h5 class="text-font text-center p-3"><strong>R$ 14,99</strong></h5>
                         </div>
                         <!-- Descrição -->
-                        <div class="p-3" id="price-desc-background">
+                        <div class="p-3 quicksand" id="price-desc-background">
                             <p class="my-2">Para Windows e Linux;</p>
                             <p class="my-2">400 GB de armazenamento;</p>
                             <p class="my-2">4 vCPU de processamento.</p>
